fix overflow, hide scrollbars

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -60,3 +60,12 @@
   animation-direction: reverse;
 }
 
+html {
+  overflow: auto;
+  scrollbar-width: none; /* For Firefox */
+  -ms-overflow-style: none;  /* For Internet Explorer and Edge */
+}
+
+html::-webkit-scrollbar {
+  width: 0px;  /* For Chrome, Safari, and Opera */
+}
